# sandbox-runtime-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  upstream-sync.yml
.github/workflows/: release.yml
.upstream-sync/: state.json
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs  schema.rs
src/manager/: filesystem.rs  mod.rs  network.rs  state.rs
src/proxy/: filter.rs  http.rs  mod.rs  socks5.rs
src/sandbox/: mod.rs
src/sandbox/linux/: bridge.rs  bwrap.rs  filesystem.rs  mod.rs  seccomp.rs
src/sandbox/macos/: glob.rs  mod.rs  monitor.rs  profile.rs  wrapper.rs
src/utils/: debug.rs  mod.rs  path.rs  platform.rs  ripgrep.rs  shell.rs
src/violation/: mod.rs  store.rs
