[package]
name = "sandbox-runtime"
version = "0.1.0"
edition = "2021"
authors = ["wangyeux@gmail.com"]
description = "OS-level sandboxing tool for enforcing filesystem and network restrictions"
license = "MIT"
repository = "https://github.com/wangyedev/sandbox-runtime-rs"
readme = "README.md"
keywords = ["sandbox", "security", "isolation", "macos", "linux"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "srt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
dirs = "5"
glob = "0.3"
parking_lot = "0.12"
base64 = "0.22"
rand = "0.8"
shell-words = "1"
regex = "1"
once_cell = "1"
bytes = "1"
pin-project-lite = "0.2"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
